// File: src/main/java/com/bankingsystem/enums/TransactionType.java
package com.bankingsystem.enums;

public enum TransactionType {
    DEPOSIT,
    WITHDRAWAL,
    TRANSFER,
    FEE,
    INTEREST,
    LOAN_PAYMENT,
    CHECK_PAYMENT,
    ATM_WITHDRAWAL,
    ONLINE_PAYMENT,
    WIRE_TRANSFER
}